--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,22 @@
+attrs==22.2.0
+autopep8==2.0.1
 click==8.1.3
 colorama==0.4.6
 dnspython==2.3.0
+exceptiongroup==1.1.0
 Flask==2.2.2
+gunicorn==20.1.0
 importlib-metadata==6.0.0
+iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
+numpy==1.24.2
+packaging==23.0
+pluggy==1.0.0
+pycodestyle==2.10.0
 pymongo==4.3.3
+pytest==7.2.1
+tomli==2.0.1
 Werkzeug==2.2.2
 zipp==3.12.0
